# gazebo-trackday

./: README.md
homework/: CMakeLists.txt  package.xml
homework/launch/: world.launch.py
homework/meshes/: track.dae
lane_keeping/: package.xml  setup.cfg  setup.py
lane_keeping/lane_keeping/: lane_keeping.py
trackday/: CMakeLists.txt  package.xml
trackday/gazebo_models/racetrack/: model.config  model.sdf
trackday/gazebo_models/racetrack/meshes/: track.dae  track.stl
trackday/launch/: check_urdf.launch.py  old_spawn_robot.launch.py  spawn_robot.launch.py  world.launch.py
trackday/meshes/: car.blend  car.dae  car.stl  rim.dae  rim.stl
trackday/urdf/: racecar.gazebo  racecar.urdf
trackday/worlds/: trackworld.sdf
